src/components/sbb-card/sbb-card.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  @include sbb.card-variables;
}

:host([color='milk']) {
  @include sbb.card-variables--milk;
}

:host([active]:not([active='false'])) {
  @include sbb.card-variables--active;
}

:host([size='xs']) {
  @include sbb.card-variables--xs;
}

:host([size='s']) {
  @include sbb.card-variables--s;
}

:host([size='m']) {
  @include sbb.card-variables--m;
}

:host([size='m'][data-has-badge]) {
  @include sbb.card-variables--m-has-badge;
}

:host([size='l']) {
  @include sbb.card-variables--l;
}

:host([size='l'][data-has-badge]) {
  @include sbb.card-variables--l-has-badge;
}

:host([size='xl']) {
  @include sbb.card-variables--xl;
}

:host([size='xl'][data-has-badge]) {
  @include sbb.card-variables--xl-has-badge;
}

:host([size='xxl']) {
  @include sbb.card-variables--xxl;
}

.sbb-card {
  @include sbb.card;

  width: 100%;
  height: 100%;

  :host(:not([active]:not([active='false'])):hover) & {
    @include sbb.card--hover;
  }
}

slot:not([name]) {
  display: block;
  height: 100%;
}

.sbb-card__opens-in-new-window {
  @include sbb.screen-reader-only;
}

// We remove upper margin from all titles
// as we do not expect multiple titles to be used inside a card.
::slotted(sbb-title) {
  margin-block-start: 0;
}

